feat: adiciona contexto paroquial seguro
